--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-window": "^1.8.11"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
