--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,18 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11"
+  },
+  "overrides": {
+    "react-scripts": {
+      "sass": "^1.77.8"
+    }
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
@@ -29,6 +36,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
-  }
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
+  },
+  "proxy": "http://localhost:3001"
 }
